--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -32,6 +32,8 @@ body {
   /*优化移动端滚动事件*/
   -webkit-overflow-scrolling: touch;
   overflow-scrolling: touch;
+
+  /* filter:alpha(Opacity=60);-moz-opacity:0.6;opacity: 0.8 */
 }
 
 body {
@@ -75,6 +77,7 @@ textarea,
 form {
   margin: 0;
   padding: 0;
+  
 }
 
 
